fix session count issue fix alignment of pagination controller with header

--- a/frontend/src/pages/Errors/ErrorFeedV2/ErrorFeedV2.module.scss
+++ b/frontend/src/pages/Errors/ErrorFeedV2/ErrorFeedV2.module.scss
@@ -90,7 +90,7 @@
     border-bottom: 1px solid transparent;
     border-bottom-color: var(--color-gray-300);
     border-top: 1px solid transparent;
-    height: 67vh;
+    height: calc(100vh - 382px);
     overflow: auto;
 
     &.hasScrolled {
